# toml2json

./: .bazelrc  BUILD.bazel  MODULE.bazel  defs.bzl
.github/workflows/: build_release.bat  build_release.sh  ci.yml  release.yml
